Fondamenta del design pronte, ora sono da renderle blu e mettere delle immagini belle

--- a/app/src/main/res/layout/activity_cut_advices.xml
+++ b/app/src/main/res/layout/activity_cut_advices.xml
@@ -8,10 +8,25 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tipLabel"
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:gravity="center"
+        android:text="TIP OF THE DAY:"
+        android:textSize="24sp" />
+
+    <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/tipLabel"
         android:textAlignment="center"
         android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/cut_tips"/>
 
 </LinearLayout>
