ALL XML CODE REVIEW.
APPLICATION IS COMPLETED.

--- a/app/src/main/res/layout/activity_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_bmiactivity.xml
@@ -201,6 +201,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:hint="@string/insert_text"
+            android:autofillHints="insert"
             android:inputType="number"
             android:textAlignment="center"
             android:textColor="@color/white"
