--- a/app/src/main/res/layout/activity_food_workout_tips.xml
+++ b/app/src/main/res/layout/activity_food_workout_tips.xml
@@ -7,6 +7,7 @@
     android:background="@color/black_bg"
     tools:context=".FoodWorkoutTipsActivity">
 
+    <!--Title-->
     <RelativeLayout
         android:id="@+id/title_layout_food_workout_tips"
         android:layout_width="match_parent"
@@ -28,6 +29,7 @@
 
     </RelativeLayout>
 
+    <!--Description-->
     <RelativeLayout
         android:id="@+id/description_tips"
         android:layout_width="match_parent"
@@ -48,6 +50,7 @@
 
     </RelativeLayout>
 
+    <!--Tips selection-->
     <RelativeLayout
         android:id="@+id/layout_button_tips"
         android:layout_width="match_parent"
@@ -101,6 +104,7 @@
 
     </RelativeLayout>
 
+    <!--Image layout-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
